<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bewegungsmelder</string>
    <string name="action_settings">Settings</string>
    <string name="pref_intervall_timer_day">Intervall Timer Tag (in Minuten)</string>
    <string name="pref_intervall_timer_night">Intervall Timer Nacht (in Minuten)</string>
    <string name="pref_direktruf_aktion">Direktruf Aktion</string>
    <string name="pref_server_address">Server Adresse</string>
    <string name="pref_server_port">Server Port</string>
    <string name="pref_server_ping_intervall">Intervall Keep-Alive Server (in Minuten)</string>
    <string name="pref_category_intervall">Intervall</string>
    <string name="pref_category_direktruf">Direktruf</string>
    <string name="pref_category_ueberwachung">Überwachung</string>
    <string name="title_activity_developer">DeveloperActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_kontakt">Kontakt</string>
    <string name="title_activity_kontakt_main">KontaktMain</string>
    <string name="title_activity_add_contact">Kontakt Hinzufugen</string>
    <string name="contact_choice_title">Wählen Sie</string>
    <string name="title_activity_zeige_kontaktliste">ZeigeKontaktliste</string>
    <string name="title_activity_kontakt_liste_test">KontaktListeTestActivity</string>
    <string name="title_activity_kontakt_manuell_hinzu">KontaktManuellHinzu</string>
    <string name="kontaktmanuellbutton">Kontakt manuell hinzufügen</string>
    <string name="kontaktauslistbutton">Kontakt aus Telefonbuch</string>
    <string name="kontaktspeichernbutton">Speichern</string>
    <string name="kontaktspeichernabbrechenbutton">Abbrechen</string>
    <string name="vorname_hint">Vornamen eingeben</string>
    <string name="nachname_hint">Nachname eingeben</string>
    <string name="number_hint">Telefonnummer eingeben</string>
    <string name="supervision_running">Supervision läuft</string>
    <string name="supervision_stopped">Supervision gestoppt</string>
    <string name="start_supervision">Start Supervision</string>
    <string name="stop_supervision">Stop Supervision</string>
    <string name="title_activity_contact_list">ContactListActivity</string>

</resources>