<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KontaktManuellHinzu" >

    <TextView
        android:id="@+id/labelTopLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/labelTopLeft"
        android:layout_below="@+id/labelTopLeft"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/telnummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/abbrechen"
        android:layout_below="@+id/name"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/number_hint"
        android:inputType="phone" />

    <Button
        android:id="@+id/abbrechen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/speichern"
        android:layout_alignBottom="@+id/speichern"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/speichern"
        android:onClick="abbrechen"
        android:text="@string/kontaktspeichernabbrechenbutton" />

    <Button
        android:id="@+id/speichern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/vorname"
        android:layout_below="@+id/telnummer"
        android:layout_marginTop="54dp"
        android:onClick="speichern"
        android:text="@string/kontaktspeichernbutton" />

</RelativeLayout>